--- a/LatestWebsite/css/styles.css
+++ b/LatestWebsite/css/styles.css
@@ -4,6 +4,9 @@
   margin-left: 0;
   margin-right: 0;
 } */
+.navbar-nav{
+  margin-left: 1050px;
+}
 .container{
   padding: 0px;;
   margin: 0px;;
@@ -50,16 +53,19 @@
    transform: scale(1.10);
 }
 
-/* .mission{
+.mission{
   transition: 0.5s all ease-in-out;
 }
 
 .mission:hover{
   transform: scale(1.10);
-} */
+}
 /* image zooming */
 
-
+i{
+  padding-left: 7.5px;
+  padding-right: 7.5px;
+}
 
 
 
@@ -86,9 +92,7 @@
   font-size: .8em;
   line-height: 1.8;
 }
-#testimonials {
-  font-style: italic;
-}
+
 #testimonials p:nth-child(2) {
   margin-top: 25px;
 }
